--- a/MathsOpenGL/MathsOpenGL.vcxproj.filters
+++ b/MathsOpenGL/MathsOpenGL.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="CyrusBeck.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="SutherlandHodgman.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CyrusBeck.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="SutherlandHodgman.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
